overlays/uksouth-tools/mobsf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobsf
  labels:
    app: mobsf
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mobsf
  template:
    metadata:
      labels:
        app: mobsf
    spec:
      containers:
        - name: mobsf
          image: docker.io/opensecurity/mobile-security-framework-mobsf:v3.5.0
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 2Gi
          volumeMounts:
            - name: mobsf
              mountPath: /home/mobsf/.MobSF
      volumes:
        - name: mobsf
          persistentVolumeClaim:
            claimName: mobsf
