overlays/uksouth-tools/mobsf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mobsf
  labels:
    app: mobsf
  namespace: default
spec:
  selector:
    app: mobsf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
