overlays/uksouth-tools/mobsf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mobsf-auth
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '90'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '90'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '90'
  name: mobsf.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: mobsf.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobsf
                port:
                  number: 80
  tls:
    - hosts:
        - mobsf.${cluster_name}.${location}.bink.sh
